--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
             margin:0 auto;
             background-size:cover;
             background-color:grey;
-            background-image: url("arcomilove1.jpg");
+            background-image: url("./img/arcomilove1.jpg");
             margin-top: 0; 
             margin-bottom: 30;
             margin-left: 20;
